<resources>
    <string name="app_name">Calculate Tip</string>
    <string name="rollButtonName">ROLL</string>
    <string name="selectLemonName">Click to select a lemon!</string>
    <string name="squeezeLemonName">Click to juice the lemon %1$s time(s)!</string>
    <string name="drinkLemonName">Click to drink your lemonade!</string>
    <string name="restartLemonName">Click to start again!</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (15%)</string>
    <string name="ok_service">Okay (10%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount %s</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
</resources>